--- a/static/index.html
+++ b/static/index.html
@@ -11,7 +11,7 @@
   <title></title>
 </head>
 <body>
-  <div id="app"></div>
+  <div id="reviews"></div>
   <script src="bundle.js"></script>
 </body>
 </html>
